fixed issue with links in pages, adjusted splash page

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
         <div id="applicationHost">
             <div class="splash">
                 <div class="message">
-                    c0rdii Web Dev
+                    F1 Web App by c0rdii
                 </div>
                 <i class="fa fa-spinner fa-spin"></i>
             </div>
