--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="css/ie10mobile.css" />
         <link rel="stylesheet" href="lib/durandal/css/durandal.css" />
         <link rel="stylesheet" href="css/starterkit.css" />
+        <link rel="stylesheet" href="//cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css"/>
         
         <script type="text/javascript">
             if (navigator.userAgent.match(/IEMobile\/10\.0/)) {
@@ -40,6 +41,5 @@
         </div>
 
         <script src="lib/require/require.js" data-main="app/main"></script>
-        
     </body>
 </html>
